# MusicAPI/src/model/RecommendationModel.ts
@@ -2,5 +2,7 @@ export interface IRecommendation{
     post_id: number,
     post_title: string,
     post_preview_image_url: string,
+    post_audio_url: string,
+    post_views_count: number
     post_likes_count: number,
 }
